--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Odin Project</title>
 </head>
 <body>
-    <p>
-        Lorem <strong>ipsum dolor</strong> sit amet <em>consectetur adipisicing elit</em> . Harum ab eveniet commodi debitis veniam, ipsum placeat, inventore esse ratione reprehenderit sed libero aspernatur, quibusdam tempore quas non voluptatem aliquam facilis.
-    </p>
+    <h1>The Odin Project</h1>
+    <p>This page contains a list of projects I made throughout The Odin Project curriculum.</p>
+    <h2>Projects:</h2>
+    <ul>
+        <li>Project 1: <a href="./recipes/index.html">Recipes</a></li>
+    </ul>
 </body>
 </html>
