Recipe project is completed as a dummy project.

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Recipes</h1>
+    <ul>
+        <li><a href="./content/recipe1.html">Recipe 1</a></li>
+        <li><a href="./content/recipe2.html">Recipe 2</a></li>
+        <li><a href="./content/recipe3.html">Recipe 3</a></li>
+    </ul>
+    <hr>
+    <p>*this is a dummy project. No useful info just placeholders.</p>
 </body>
 </html>
