update Odin repo after completing project 1 Recipes

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Odin Project</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>The Odin Project</h1>
-    <p>This page contains a list of projects I made throughout The Odin Project curriculum.</p>
+    <p>
+      This page contains a list of projects I made throughout The Odin Project
+      curriculum.
+    </p>
     <h2>Projects:</h2>
     <ul>
-        <li>Project 1: <a href="./recipes/index.html">Recipes</a></li>
+      <li>
+        Project 1: <a href="./recipes/index.html">Recipes</a> (
+        <em>dummy project</em> )
+      </li>
     </ul>
-</body>
+  </body>
 </html>
