apply basic styles to the project

--- a/recipes/content/recipe1.html
+++ b/recipes/content/recipe1.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe 1</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <h1>Recipe 1</h1>
-    <img src="./imgs/image1.png" alt="Image of Recipe 1">
+    <img src="./imgs/image1.png" alt="Image of Recipe 1" />
     <h2>Description</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, beatae quidem minima corrupti accusamus placeat, itaque sint consectetur aspernatur quam dolore cupiditate ipsum. Repellendus praesentium iste, distinctio deserunt possimus dolores.</p>
+    <p class="description">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, beatae
+      quidem minima corrupti accusamus placeat, itaque sint consectetur
+      aspernatur quam dolore cupiditate ipsum. Repellendus praesentium iste,
+      distinctio deserunt possimus dolores.
+    </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>ingredient 1</li>
-        <li>ingredient 2</li>
-        <li>ingredient 3</li>
-        <li>ingredient 4</li>
-        <li>ingredient 5</li>
+      <li>ingredient 1</li>
+      <li>ingredient 2</li>
+      <li>ingredient 3</li>
+      <li>ingredient 4</li>
+      <li>ingredient 5</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>step 1</li>
-        <li>step 2</li>
-        <li>step 3</li>
-        <li>step 4</li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, quam?
+        Nulla saepe deserunt porro quibusdam omnis alias architecto iste fuga.
+        Illo, quos distinctio beatae delectus ab maxime in quidem voluptatem.
+      </li>
+      <li>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam esse
+        placeat quia. Nihil a sed iste repudiandae incidunt voluptate
+        reprehenderit doloribus quam magnam esse necessitatibus, adipisci dolor
+        officiis repellat inventore.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+        modi odio praesentium, repellat perferendis tempore expedita velit
+        excepturi quo neque repudiandae error sapiente nihil non provident vel
+        pariatur eos assumenda!
+      </li>
+      <li>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit minus
+        debitis expedita voluptates animi non voluptatem itaque quas corrupti
+        eos ullam aliquid magni, dolor impedit quibusdam praesentium, enim
+        dolore earum!
+      </li>
     </ol>
     <a href="../index.html">Back to all recipes</a>
-</body>
+  </body>
 </html>
