--- a/recipes/content/recipe2.html
+++ b/recipes/content/recipe2.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe 2</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <h1>Recipe 2</h1>
-    <img src="./imgs/image2.png" alt="Image of Recipe 2">
+    <img src="./imgs/image2.png" alt="Image of Recipe 2" />
     <h2>Description</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, beatae quidem minima corrupti accusamus placeat, itaque sint consectetur aspernatur quam dolore cupiditate ipsum. Repellendus praesentium iste, distinctio deserunt possimus dolores.</p>
+    <p class="description">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, beatae
+      quidem minima corrupti accusamus placeat, itaque sint consectetur
+      aspernatur quam dolore cupiditate ipsum. Repellendus praesentium iste,
+      distinctio deserunt possimus dolores.
+    </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>ingredient 1</li>
-        <li>ingredient 2</li>
-        <li>ingredient 3</li>
-        <li>ingredient 4</li>
-        <li>ingredient 5</li>
+      <li>ingredient 1</li>
+      <li>ingredient 2</li>
+      <li>ingredient 3</li>
+      <li>ingredient 4</li>
+      <li>ingredient 5</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>step 1</li>
-        <li>step 2</li>
-        <li>step 3</li>
-        <li>step 4</li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        asperiores consectetur ut iure dolores non enim, officia deserunt
+        dolorum nam? Veniam, rem libero! Ea incidunt veniam aut voluptate
+        perferendis nihil?
+      </li>
+      <li>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis
+        dolores, perferendis eaque voluptate quod autem sapiente consequatur
+        magni atque, culpa, a possimus saepe cum aliquam tempora similique
+        suscipit? Et, nam.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis,
+        animi autem necessitatibus dolorem aperiam vero. Voluptatem distinctio
+        repudiandae esse ex ad consequuntur nemo quia at non a, cumque dolorem
+        suscipit.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+        modi odio cum magnam, optio mollitia in ex. Aspernatur reiciendis
+        repudiandae facere, autem repellat quasi quos veritatis excepturi
+        tempora vel? Debitis.
+      </li>
     </ol>
     <a href="../index.html">Back to all recipes</a>
-</body>
+  </body>
 </html>
