--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 1: Recipes</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Recipes</h1>
     <ul>
-        <li><a href="./content/recipe1.html">Recipe 1</a></li>
-        <li><a href="./content/recipe2.html">Recipe 2</a></li>
-        <li><a href="./content/recipe3.html">Recipe 3</a></li>
+      <li><a href="./content/recipe1.html">Recipe 1</a></li>
+      <li><a href="./content/recipe2.html">Recipe 2</a></li>
+      <li><a href="./content/recipe3.html">Recipe 3</a></li>
     </ul>
-    <hr>
-    <p>*this is a dummy project. No useful info just placeholders.</p>
-</body>
+    <hr />
+    <p id="note">
+      * this is a dummy project. No useful info just placeholders.
+    </p>
+  </body>
 </html>
