--- a/recipes/content/recipe3.html
+++ b/recipes/content/recipe3.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe 3</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <h1>Recipe 3</h1>
-    <img src="./imgs/image3.png" alt="Image of Recipe 3">
+    <img src="./imgs/image3.png" alt="Image of Recipe 3" />
     <h2>Description</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, beatae quidem minima corrupti accusamus placeat, itaque sint consectetur aspernatur quam dolore cupiditate ipsum. Repellendus praesentium iste, distinctio deserunt possimus dolores.</p>
+    <p class="description">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, beatae
+      quidem minima corrupti accusamus placeat, itaque sint consectetur
+      aspernatur quam dolore cupiditate ipsum. Repellendus praesentium iste,
+      distinctio deserunt possimus dolores.
+    </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>ingredient 1</li>
-        <li>ingredient 2</li>
-        <li>ingredient 3</li>
-        <li>ingredient 4</li>
-        <li>ingredient 5</li>
+      <li>ingredient 1</li>
+      <li>ingredient 2</li>
+      <li>ingredient 3</li>
+      <li>ingredient 4</li>
+      <li>ingredient 5</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>step 1</li>
-        <li>step 2</li>
-        <li>step 3</li>
-        <li>step 4</li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+        consectetur eius officiis repellat beatae tempore aut ipsam soluta
+        doloribus suscipit quod rerum libero dolorem sequi, doloremque omnis
+        enim iusto porro.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+        consectetur eius officiis repellat beatae tempore aut ipsam soluta
+        doloribus suscipit quod rerum libero dolorem sequi, doloremque omnis
+        enim iusto porro.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+        consectetur eius officiis repellat beatae tempore aut ipsam soluta
+        doloribus suscipit quod rerum libero dolorem sequi, doloremque omnis
+        enim iusto porro.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+        consectetur eius officiis repellat beatae tempore aut ipsam soluta
+        doloribus suscipit quod rerum libero dolorem sequi, doloremque omnis
+        enim iusto porro.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+        consectetur eius officiis repellat beatae tempore aut ipsam soluta
+        doloribus suscipit quod rerum libero dolorem sequi, doloremque omnis
+        enim iusto porro.
+      </li>
     </ol>
     <a href="../index.html">Back to all recipes</a>
-</body>
+  </body>
 </html>
