--- a/css-exercises/margin-and-padding/margin-and-padding-1/index.html
+++ b/css-exercises/margin-and-padding/margin-and-padding-1/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Margin and Padding exercise</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="one">
-    DIV ONE
-  </div>
-  <div class="two">
-    DIV TWO
-  </div>
-  <div class="three">
-    DIV THREE
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Margin and Padding exercise</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="one">DIV ONE</div>
+    <div class="two">DIV TWO</div>
+    <div class="three">DIV THREE</div>
+    <br /><br /><br />
+    <img src="./desired-outcome.png" width="580px" />
+  </body>
 </html>
