--- a/css-exercises/flex/05-flex-modal/index.html
+++ b/css-exercises/flex/05-flex-modal/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Modal</title>
-</head>
-<body>
-  <div class="modal">
-    <div class="icon">!</div>
-    <div class="header">Are you sure you want to do that?</div>
-    <div class="close-button">✖</div>
-    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-    <button class="continue">Continue</button>
-    <button class="cancel">Cancel</button>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Modal</title>
+  </head>
+  <body>
+    <div class="modal">
+      <div class="icon">!</div>
+      <div class="content">
+        <div class="top">
+          <div class="header">Are you sure you want to do that?</div>
+          <div class="close-button">✖</div>
+        </div>
+        <div class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+          excepturi id soluta, numquam minima rerum doloremque eveniet
+          aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem
+          consectetur sequi amet aspernatur cumque!
+        </div>
+        <div class="buttons">
+          <button class="continue">Continue</button>
+          <button class="cancel">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
