--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,6 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <nav class="header-left">
+        <a class="logo" href="">Header Logo</a>
+      </nav>
+      <nav class="header-right">
+        <ul>
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="overview">
+        <div>
+          <h1>This website is awesome</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. At nam amet
+            inventore perspiciatis! Ducimus iusto veritatis
+          </p>
+          <button>Sign up</button>
+        </div>
+        <figure>
+          <img src="" alt="a random welcome image" />
+        </figure>
+      </section>
+      <section id="info">
+        <h2>Some random information.</h2>
+        <div class="cards">
+          <figure class="card">
+            <img src="" alt="card image" />
+            <figcaption>
+              figcaption is some text under the image that describe the image
+              above it.
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img src="" alt="card image" />
+            <figcaption>
+              figcaption is some text under the image that describe the image
+              above it.
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img src="" alt="card image" />
+            <figcaption>
+              figcaption is some text under the image that describe the image
+              above it.
+            </figcaption>
+          </figure>
+          <figure class="card">
+            <img src="" alt="card image" />
+            <figcaption>
+              figcaption is some text under the image that describe the image
+              above it.
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+      <section id="quote">
+        <p class="quote">
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
+          perferendis reiciendis quibusdam eum voluptatibus harum rerum
+          reprehenderit non deleniti dolorum quasi unde praesentium cupiditate,
+          rem illum at commodi! Officia, voluptatibus?
+        </p>
+        <p class="author">-Unknown</p>
+      </section>
+      <section id="action">
+        <div class="text">
+          <h2>Call to action! it's time!</h2>
+          <p>Sign up today to get what you want...</p>
+        </div>
+        <button>Sign up</button>
+      </section>
+    </main>
+    <footer id="footer">
+      <a href="https://www.theodinproject.com/" target="_blank">
+        Copyright © The Odin Project 2021
+      </a>
+    </footer>
+  </body>
 </html>
