Landing Page Project Completed

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -4,73 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Crypto Night</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header id="header">
       <nav class="header-left">
-        <a class="logo" href="">Header Logo</a>
+        <a class="logo" href="">Crypto Night</a>
       </nav>
       <nav class="header-right">
         <ul>
-          <li><a href="">Link 1</a></li>
-          <li><a href="">Link 2</a></li>
-          <li><a href="">Link 3</a></li>
+          <li><a href="">Sign up</a></li>
+          <li><a href="">Login</a></li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
+              target="_blank"
+            >
+              Contact us
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
       <section id="overview">
+        <img src="./images/welcome.svg" alt="welcome image" />
         <div>
-          <h1>This website is awesome</h1>
+          <h1>Crypto Night</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At nam amet
-            inventore perspiciatis! Ducimus iusto veritatis
+            Crypto Night is more than just a Bitcoin trading platform. it's a
+            secure crypto exchange that makes it easy to buy, sell, and trade
+            cryptocurrency like Bitcoin, Ethereum, and more.
           </p>
           <button>Sign up</button>
         </div>
-        <figure>
-          <img src="" alt="a random welcome image" />
-        </figure>
       </section>
       <section id="info">
-        <h2>Some random information.</h2>
+        <h2>Trending Cryptocurrencies</h2>
         <div class="cards">
           <figure class="card">
-            <img src="" alt="card image" />
-            <figcaption>
-              figcaption is some text under the image that describe the image
-              above it.
-            </figcaption>
+            <a href="https://bitcoin.org/en/" target="_blank">
+              <img src="./images/BTC.svg" alt="Bitcoin Image" />
+              <figcaption>Bitcoin</figcaption>
+            </a>
           </figure>
           <figure class="card">
-            <img src="" alt="card image" />
-            <figcaption>
-              figcaption is some text under the image that describe the image
-              above it.
-            </figcaption>
+            <a href="https://ethereum.org/en/" target="_blank">
+              <img src="./images/ETH.svg" alt="Ethereum Image" />
+              <figcaption>Ethereum</figcaption>
+            </a>
           </figure>
           <figure class="card">
-            <img src="" alt="card image" />
-            <figcaption>
-              figcaption is some text under the image that describe the image
-              above it.
-            </figcaption>
+            <a href="https://www.binance.com/en" target="_blank">
+              <img src="./images/BNB.svg" alt="Binance Coin Image" />
+              <figcaption>Binance Coin</figcaption>
+            </a>
           </figure>
           <figure class="card">
-            <img src="" alt="card image" />
-            <figcaption>
-              figcaption is some text under the image that describe the image
-              above it.
-            </figcaption>
+            <a href="https://tether.to/" target="_blank">
+              <img src="./images/USDT.svg" alt="Tether Image" />
+              <figcaption>Tether</figcaption>
+            </a>
           </figure>
         </div>
       </section>
       <section id="quote">
         <p class="quote">
-          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
           perferendis reiciendis quibusdam eum voluptatibus harum rerum
           reprehenderit non deleniti dolorum quasi unde praesentium cupiditate,
           rem illum at commodi! Officia, voluptatibus?
@@ -79,8 +81,8 @@
       </section>
       <section id="action">
         <div class="text">
-          <h2>Call to action! it's time!</h2>
-          <p>Sign up today to get what you want...</p>
+          <h2>Trade More Securely</h2>
+          <p>Sign up today and join the economy of the future.</p>
         </div>
         <button>Sign up</button>
       </section>
