Rename landing-page folder to crypto-night. Update README file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         Project 1: <a href="./recipes/index.html">Recipes</a> (
         <em>dummy project</em> )
       </li>
+      <li>
+        Project 2:
+        <a href="./crypto-night/index.html">Crypto Night</a>
+        ( <em>Landing Page</em> )
+      </li>
     </ul>
   </body>
 </html>
