console version of the project is completed

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
   </head>
-  <body></body>
+  <body>
+    <script src="script.js"></script>
+    <h1>Rock Paper Scissors</h1>
+    <p>The game is playable from the console, just type:</p>
+    <ul>
+      <li><code>game();</code> to play a 5 rounds game.</li>
+      <li><code>game(n);</code> to play n rounds game.</li>
+    </ul>
+  </body>
 </html>
