Add links for project 3: Rock Paper Scissors

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <a href="./crypto-night/index.html">Crypto Night</a>
         ( <em>Landing Page</em> )
       </li>
+      <li>
+        Project 3:
+        <a href="./rock-paper-scissors/index.html">Rock Paper Scissors</a> (
+        <em>console project</em> )
+      </li>
     </ul>
   </body>
 </html>
