--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -8,5 +8,40 @@
     <title>Etch A Sketch</title>
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <label for="grid-length">grid length</label>
+      <input
+        type="range"
+        name="grid-length"
+        id="grid-length"
+        min="1"
+        max="128"
+        value="16"
+      />
+      <label for="grid-length" id="length-label">16px</label>
+      <button id="reset-btn">Reset</button>
+      <input type="color" id="color-in" />
+    </section>
+    <section>
+      <div>
+        <input
+          type="radio"
+          id="color-rd"
+          name="color-mode"
+          value="color"
+          checked
+        />
+        <label for="color-rd">Color Mode</label>
+      </div>
+      <div>
+        <input type="radio" id="random-rd" name="color-mode" value="random" />
+        <label for="random-rd">Random Mode</label>
+      </div>
+      <div>
+        <input type="radio" id="gray-rd" name="color-mode" value="gray" />
+        <label for="gray-rd">Gray Mode</label>
+      </div>
+    </section>
+  </body>
 </html>
