--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -5,43 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Etch A Sketch</title>
     <script src="script.js" defer></script>
   </head>
   <body>
-    <section>
-      <label for="grid-length">grid length</label>
-      <input
-        type="range"
-        name="grid-length"
-        id="grid-length"
-        min="1"
-        max="128"
-        value="16"
-      />
-      <label for="grid-length" id="length-label">16px</label>
-      <button id="reset-btn">Reset</button>
-      <input type="color" id="color-in" />
-    </section>
-    <section>
-      <div>
-        <input
-          type="radio"
-          id="color-rd"
-          name="color-mode"
-          value="color"
-          checked
-        />
-        <label for="color-rd">Color Mode</label>
+    <header><h1>Etch A Sketch</h1></header>
+    <main>
+      <div id="options">
+        <section>
+          <h2>Options</h2>
+          <input
+            type="range"
+            name="grid-length"
+            id="grid-length"
+            min="1"
+            max="128"
+            value="16"
+          />
+          <label for="grid-length" id="length-label">16px</label>
+        </section>
+        <section class="modes">
+          <div>
+            <input
+              type="radio"
+              id="color-rd"
+              name="color-mode"
+              value="color"
+              checked
+            />
+            <label for="color-rd">Color Mode</label>
+            <input type="color" id="color-in" />
+          </div>
+          <div>
+            <input
+              type="radio"
+              id="random-rd"
+              name="color-mode"
+              value="random"
+            />
+            <label for="random-rd">Random Mode</label>
+          </div>
+          <div>
+            <input type="radio" id="gray-rd" name="color-mode" value="gray" />
+            <label for="gray-rd">Gray Mode</label>
+          </div>
+        </section>
+        <button id="reset-btn">Clear</button>
       </div>
-      <div>
-        <input type="radio" id="random-rd" name="color-mode" value="random" />
-        <label for="random-rd">Random Mode</label>
-      </div>
-      <div>
-        <input type="radio" id="gray-rd" name="color-mode" value="gray" />
-        <label for="gray-rd">Gray Mode</label>
-      </div>
-    </section>
+      <div id="render"></div>
+    </main>
+    <footer>
+      Coded by
+      <a
+        href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
+        target="_blank"
+      >
+        Mahmoud Elnagar
+      </a>
+    </footer>
   </body>
 </html>
