updated project list on the README file

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
       </li>
       <li>
         Project 3:
-        <a href="./rock-paper-scissors/index.html">Rock Paper Scissors</a> (
-        <em>console project</em> )
+        <a href="./rock-paper-scissors/index.html">Rock Paper Scissors</a>
+      </li>
+      <li>
+        Project 4:
+        <a href="./etch-a-sketch/index.html">Etch A Sketch</a>
       </li>
     </ul>
   </body>
