--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,5 +9,53 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="calculator">
+        <div class="row screen">
+          <div id="screen-top"></div>
+          <div id="screen-bottom"></div>
+        </div>
+        <div class="row">
+          <button id="clear">clear</button>
+          <button id="delete">delete</button>
+          <button id="negate">+/-</button>
+        </div>
+        <div class="row">
+          <button id="num7">7</button>
+          <button id="num8">8</button>
+          <button id="num9">9</button>
+          <button id="op÷">÷</button>
+        </div>
+        <div class="row">
+          <button id="num4">4</button>
+          <button id="num5">5</button>
+          <button id="num6">6</button>
+          <button id="op×">×</button>
+        </div>
+        <div class="row">
+          <button id="num1">1</button>
+          <button id="num2">2</button>
+          <button id="num3">3</button>
+          <button id="op-">-</button>
+        </div>
+        <div class="row">
+          <button id="num.">.</button>
+          <button id="num0">0</button>
+          <button id="=">=</button>
+          <button id="op+">+</button>
+        </div>
+      </div>
+    </main>
+    <footer>
+      Coded By
+      <a
+        href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
+        target="_blank"
+        title="contact me on linkedin"
+      >
+        Mahmoud Elnagar
+      </a>
+    </footer>
+  </body>
 </html>
