Update project list

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         Project 4:
         <a href="./etch-a-sketch/index.html">Etch A Sketch</a>
       </li>
+      <li>
+        Project 5:
+        <a href="./calculator/index.html">Calculator</a>
+      </li>
     </ul>
   </body>
 </html>
