update projects list

--- a/index.html
+++ b/index.html
@@ -12,29 +12,37 @@
       This page contains a list of projects I made throughout The Odin Project
       curriculum.
     </p>
-    <h2>Projects:</h2>
-    <ul>
-      <li>
-        Project 1: <a href="./recipes/index.html">Recipes</a> (
-        <em>dummy project</em> )
-      </li>
-      <li>
-        Project 2:
-        <a href="./crypto-night/index.html">Crypto Night</a>
-        ( <em>Landing Page</em> )
-      </li>
-      <li>
-        Project 3:
-        <a href="./rock-paper-scissors/index.html">Rock Paper Scissors</a>
-      </li>
-      <li>
-        Project 4:
-        <a href="./etch-a-sketch/index.html">Etch A Sketch</a>
-      </li>
-      <li>
-        Project 5:
-        <a href="./calculator/index.html">Calculator</a>
-      </li>
-    </ul>
+
+    <section>
+      <h2>Foundations</h2>
+      <ul>
+        <li>
+          Project 1: <a href="./recipes/index.html">Recipes</a> (
+          <em>dummy project</em> )
+        </li>
+        <li>
+          Project 2:
+          <a href="./crypto-night/index.html">Crypto Night</a>
+        </li>
+        <li>
+          Project 3:
+          <a href="./rock-paper-scissors/index.html">Rock Paper Scissors</a>
+        </li>
+        <li>
+          Project 4:
+          <a href="./etch-a-sketch/index.html">Etch A Sketch</a>
+        </li>
+        <li>
+          Project 5:
+          <a href="./calculator/index.html">Calculator</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Intermediate HTML and CSS</h2>
+      <ul>
+        <li>Project 1: <a href="./sign-up-form/index.html">Sign up Form</a></li>
+      </ul>
+    </section>
   </body>
 </html>
