--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -7,5 +7,186 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="search">
+        <label for="search">
+          <img src="./images/search.svg" alt="search icon" />
+        </label>
+        <input type="search" name="search" id="search" />
+      </div>
+
+      <div class="options">
+        <img src="./images/notify.svg" alt="notify icon" />
+        <img src="./images/hero.svg" alt="hero icon" class="hero" />
+        <a href="#">Mahmoud Elnagar</a>
+      </div>
+
+      <div class="profile">
+        <img src="./images/hero.svg" alt="hero icon" class="hero" />
+        <p>Hi there,</p>
+        <h2>Mahmoud Elnagar (@m-elnagar)</h2>
+      </div>
+      <div class="actions">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
+    </header>
+    <aside class="no-scroller">
+      <div class="logo">
+        <img
+          src="./images/dashboard.svg"
+          alt="dashboard icon"
+          class="white-filter"
+        />
+        <h1>Dashboard</h1>
+      </div>
+      <nav>
+        <ul class="top-nav">
+          <li>
+            <img src="./images/home.svg" alt="home icon" class="white-filter" />
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <img
+              src="./images/profile.svg"
+              alt="profile icon"
+              class="white-filter"
+            />
+            <a href="#">Profile</a>
+          </li>
+          <li>
+            <img
+              src="./images/messages.svg"
+              alt="messages icon"
+              class="white-filter"
+            />
+            <a href="#">Messages</a>
+          </li>
+          <li>
+            <img
+              src="./images/history.svg"
+              alt="history icon"
+              class="white-filter"
+            />
+            <a href="#">History</a>
+          </li>
+          <li>
+            <img
+              src="./images/tasks.svg"
+              alt="tasks icon"
+              class="white-filter"
+            />
+            <a href="#">Tasks</a>
+          </li>
+          <li>
+            <img
+              src="./images/communities.svg"
+              alt="communities icon"
+              class="white-filter"
+            />
+            <a href="#">Communities</a>
+          </li>
+        </ul>
+        <ul class="bottom-nav">
+          <li>
+            <img
+              src="./images/settings.svg"
+              alt="settings icon"
+              class="white-filter"
+            />
+            <a href="#">Settings</a>
+          </li>
+          <li>
+            <img
+              src="./images/support.svg"
+              alt="support icon"
+              class="white-filter"
+            />
+            <a href="#">Support</a>
+          </li>
+          <li>
+            <img
+              src="./images/privacy.svg"
+              alt="privacy icon"
+              class="white-filter"
+            />
+            <a href="#">Privacy</a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <main class="no-scroller">
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officia
+        itaque sed mollitia incidunt, quasi beatae. Rerum necessitatibus natus
+        vel, cupiditate minus provident, tempora quidem laboriosam doloribus eos
+        quisquam fugit. Nulla corrupti quasi totam, doloremque omnis quos sed
+        eum ad molestiae saepe laudantium perferendis itaque consectetur dolor
+        ab harum commodi odio cumque aut beatae? Nobis nesciunt suscipit dolorum
+        autem accusantium! Excepturi officia, consectetur similique eaque beatae
+        deserunt incidunt laboriosam placeat quam odit laudantium dicta ullam
+        fugit cupiditate magni minus rem dolorem ab voluptatum porro. Deserunt
+        quam perferendis laborum cum fugit! Expedita dolorem saepe velit, eum
+        dicta aliquam sint voluptas quod dolorum sit commodi necessitatibus
+        exercitationem! Aperiam, velit ratione quos qui eius animi saepe commodi
+        sapiente, magnam laudantium facilis! Earum, eveniet. Aut nemo amet
+        labore officia animi deserunt iste eos ad magni voluptatem. Quasi
+        officia praesentium amet? Sunt unde, iusto laborum recusandae sequi
+        maxime minus dolores, adipisci et officiis beatae esse. Veritatis,
+        voluptatibus aperiam. Minima, alias. Accusantium temporibus, asperiores
+        delectus, praesentium, a non ad quisquam ut molestiae voluptate harum
+        earum perferendis doloribus exercitationem tenetur ipsum ducimus. Ad
+        quidem culpa est consequatur. Magnam reprehenderit, eveniet veritatis
+        hic esse perferendis, quia, laborum ipsum architecto commodi ut
+        exercitationem illo veniam praesentium velit alias est error corrupti
+        quidem culpa consequuntur. Officiis sequi et est beatae. Optio rem nobis
+        voluptatem possimus dolores, hic minus amet ad sint. Perferendis, porro
+        dicta! Reprehenderit, veritatis voluptatem rem tenetur provident dicta
+        ex nisi eligendi. Tempora ipsam id iure accusamus doloribus! A deleniti
+        voluptate est iusto! Quibusdam deleniti quam ipsam facilis voluptatum
+        aliquid perferendis amet nostrum dicta eius voluptates fugiat maiores
+        quae similique eum ipsum molestias dolorum necessitatibus, voluptate
+        incidunt consequatur! Ex facilis praesentium, non suscipit sed vitae
+        minus blanditiis labore repudiandae id laudantium quae sit explicabo
+        cupiditate esse mollitia consequuntur cum sunt consequatur odit magnam
+        quia? Non autem vel consequuntur. Culpa, iusto deserunt tempora optio
+        fugiat veritatis sequi voluptatibus dicta magnam dignissimos harum
+        laboriosam quam natus consequatur nobis, exercitationem ducimus sed
+        rerum architecto possimus. Sint, tenetur! Vero culpa facilis doloremque?
+        Vitae repellendus iste optio cupiditate commodi sequi eum ad. Labore
+        natus minima repellendus a commodi inventore, voluptas maiores! Tempore
+        provident necessitatibus aspernatur. Natus id nisi dolorum quas libero
+        doloremque. Atque. Ratione, eum. Assumenda fugiat nisi ratione dolor
+        provident repudiandae, dolore ea blanditiis dignissimos voluptas impedit
+        reprehenderit enim? Id, aut tenetur. Error at quos numquam consectetur
+        voluptatum rem distinctio fugiat tenetur. Aspernatur, temporibus error
+        quo quibusdam odit nulla dolor asperiores. Nihil quas ratione minima
+        quisquam odio aspernatur enim consequatur tempora qui eaque a,
+        perspiciatis, optio nesciunt itaque quae distinctio aliquam placeat!
+        Nesciunt doloribus quae quibusdam eveniet quidem numquam accusamus,
+        consequuntur iure, sapiente facilis aut temporibus ratione, adipisci
+        fugit eius. Et veniam libero dolorem, quam illo explicabo reprehenderit
+        unde enim. Dolore, debitis! Excepturi obcaecati eveniet incidunt qui
+        voluptate ipsam, maiores laudantium praesentium voluptates quidem,
+        dolorem, quis vitae nemo assumenda earum dolore pariatur ab. Architecto,
+        quas officia aliquid quasi quam necessitatibus maxime accusamus?
+        Dignissimos nisi labore temporibus perspiciatis architecto tempora
+        corporis dolor debitis consequatur iusto soluta, tempore animi maxime.
+        Totam enim sapiente corrupti repudiandae illo, similique hic et?
+        Recusandae voluptatibus voluptate error laboriosam. Laboriosam
+        architecto ullam consequatur deleniti inventore voluptatibus corrupti
+        odit quo soluta. Iusto modi quo cum maiores quasi debitis facilis
+        laborum ratione voluptates illum nam veritatis, delectus vitae
+        reprehenderit dolores vero. Fugit, minus non neque optio nostrum
+        inventore eos, labore cum quasi provident, ipsam ipsum quod accusamus
+        placeat quia sunt at in animi id beatae consectetur error omnis
+        laudantium. Facilis, sed? Nemo, ut consectetur dolore, tempore facilis
+        corrupti dignissimos quis totam maiores eveniet iusto assumenda
+        accusamus pariatur sequi, voluptas cupiditate rem harum quaerat magnam
+        quo. Molestiae, maxime? Et, totam provident. Ad?
+      </div>
+    </main>
+  </body>
 </html>
